[gd_scene load_steps=16 format=3 uid="uid://w6mkeioqln3k"]

[ext_resource type="Script" uid="uid://cv3gjo1nrdhya" path="res://addons/inventory-system/editor/inventory_editor.gd" id="1_hn7br"]
[ext_resource type="Texture2D" uid="uid://3f53y2sfj1sb" path="res://addons/inventory-system/icons/inventory_database_editor.svg" id="2_0nqqt"]
[ext_resource type="Script" uid="uid://du48nvpnxfcqx" path="res://addons/inventory-system/editor/tab_container_inventory.gd" id="2_3cl1k"]
[ext_resource type="Texture2D" uid="uid://7ueixntymdwg" path="res://addons/inventory-system/icons/new_inventory_item.svg" id="2_lu5r1"]
[ext_resource type="Texture2D" uid="uid://76umvuslxorx" path="res://addons/inventory-system/icons/inventory_item.svg" id="3_6kl7v"]
[ext_resource type="Texture2D" uid="uid://dhpnx4f2e7pwf" path="res://addons/inventory-system/icons/new_recipe.svg" id="3_clewf"]
[ext_resource type="Texture2D" uid="uid://br4lqgdunlyet" path="res://addons/inventory-system/icons/recipe.svg" id="4_20x4i"]
[ext_resource type="Texture2D" uid="uid://ilsakiynp5o7" path="res://addons/inventory-system/icons/new_craft_station_type.svg" id="4_jbtk0"]
[ext_resource type="Texture2D" uid="uid://6b7n3apcb8hy" path="res://addons/inventory-system/icons/new_item_category.svg" id="5_4w1hd"]
[ext_resource type="PackedScene" uid="uid://kuckh8lq8mwr" path="res://addons/inventory-system/editor/items/item_definitions_editor.tscn" id="5_fwymy"]
[ext_resource type="PackedScene" uid="uid://c20tt03af3qw6" path="res://addons/inventory-system/editor/recipes/recipes_editor.tscn" id="6_qmu8k"]
[ext_resource type="Texture2D" uid="uid://3qxo8va657qh" path="res://addons/inventory-system/icons/craft_station_type.svg" id="8_4vmnl"]
[ext_resource type="Texture2D" uid="uid://bgx18ev7eamk5" path="res://addons/inventory-system/icons/item_category.svg" id="10_86ysm"]
[ext_resource type="PackedScene" uid="uid://clj2qii0ta8lx" path="res://addons/inventory-system/editor/craft_stations/craft_station_types_editor.tscn" id="11_rrabm"]
[ext_resource type="PackedScene" uid="uid://cfevgv38d1bll" path="res://addons/inventory-system/editor/categories/categories_editor.tscn" id="12_kvj1p"]

[node name="InventoryEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hn7br")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DatabaseButton" type="MenuButton" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
text = "Database"
icon = ExtResource("2_0nqqt")
flat = false

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
layout_mode = 2

[node name="NewItemButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Inventory Item"
disabled = true
text = "New Item Definition"
icon = ExtResource("2_lu5r1")
flat = true

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
layout_mode = 2

[node name="NewRecipeButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Recipe"
disabled = true
text = "New Recipe"
icon = ExtResource("3_clewf")
flat = true

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
layout_mode = 2

[node name="NewCraftStationTypeButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Craft Station Type"
disabled = true
text = "New Craft Station Type"
icon = ExtResource("4_jbtk0")
flat = true

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
layout_mode = 2

[node name="NewItemCategoryButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Item Category"
disabled = true
text = "New Item Category"
icon = ExtResource("5_4w1hd")
flat = true

[node name="VSeparator5" type="VSeparator" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Open the InventoryDatabase resource to see the content here"
horizontal_alignment = 2
vertical_alignment = 2
text_overrun_behavior = 1
structured_text_bidi_override = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
visible = false
layout_mode = 2
text = "Database: "
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
item_count = 2
popup/item_0/text = "dsadasdsa"
popup/item_0/id = 0
popup/item_1/text = "dadsadsa"
popup/item_1/id = 1

[node name="MenuBar" type="MenuBar" parent="MarginContainer/VBoxContainer/MarginContainer/Toolbar"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/Content"]
layout_mode = 2
mouse_filter = 2
current_tab = 0
script = ExtResource("2_3cl1k")
items_icon = ExtResource("3_6kl7v")
recipes_icon = ExtResource("4_20x4i")
craft_station_types_icon = ExtResource("8_4vmnl")
categories_icon = ExtResource("10_86ysm")

[node name="Items" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("5_fwymy")]
layout_mode = 2
mouse_filter = 1
metadata/_tab_index = 0
metadata/_tab_name = "Item Definitions"

[node name="RecipesEditor" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("6_qmu8k")]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1
metadata/_tab_index = 1
metadata/_tab_name = "Recipes"

[node name="CraftStationTypesEditor" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("11_rrabm")]
visible = false
layout_mode = 2
mouse_filter = 1
metadata/_tab_index = 2
metadata/_tab_name = "Craft Station Types"

[node name="CategoriesEditor" parent="MarginContainer/VBoxContainer/Content/TabContainer" instance=ExtResource("12_kvj1p")]
visible = false
layout_mode = 2
mouse_filter = 1
metadata/_tab_index = 3
metadata/_tab_name = "Item Categories"

[node name="NewDialog" type="FileDialog" parent="."]
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.tres ; InventoryDatabase")

[node name="SaveDialog" type="FileDialog" parent="."]
size = Vector2i(312, 180)
dialog_hide_on_ok = true
filters = PackedStringArray("*.inv ; Inventory")

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(312, 175)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.tres ; InventoryDatabase")

[node name="OpenInvDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(312, 175)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.inv")

[node name="SaveJsonDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
size = Vector2i(312, 180)
dialog_hide_on_ok = true
filters = PackedStringArray("*.inv ; Inventory")

[connection signal="theme_changed" from="." to="." method="_on_theme_changed"]
[connection signal="data_changed" from="MarginContainer/VBoxContainer/Content/TabContainer/CraftStationTypesEditor" to="MarginContainer/VBoxContainer/Content/TabContainer/RecipesEditor" method="_on_data_changed"]
